--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,8 +3,22 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #f6f8fc;
+}
+
+@media screen and (min-width: 992px){
+    .content{
+        max-width: 992px;
+        margin: 1rem auto;
+        height: auto;
+        border-radius: 1rem;
+    }
+}
 .content {
     padding: 1rem;
+    background-color: #fff;
+    height: 100vh;
 }
 
 .pokemons{
@@ -13,6 +27,18 @@
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+@media screen and (min-width: 550px){
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr ;
+    }
+}
+
+@media screen and (min-width: 670px){
+    .pokemons{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
 }
 
 .pokemon{
