--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,3 +1,31 @@
+
 #user_avatar {
-    border-radius: 100% ;
+   border-radius: 100%;
+   width: 80px;
+   height: 80px;
+   object-fit: cover;
 }
+
+#sidebar{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: aqua;
+    height: 100vh;
+    border-radius: 1rem;
+}
+
+@media screen and (max-width: 992px){
+    #sidebar{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: aqua;
+        height: 100vh;
+        border-radius: 0 1rem 1rem 0;
+    }
+}
+
+
+
+
