--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -2,7 +2,7 @@
 
 .pokemons{
     display: grid; 
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -15,7 +15,6 @@
     padding: 1rem;
     background-color: #49d0b0;
     border-radius: 1rem;
-    
     right: 10px;
 }
 
@@ -56,8 +55,14 @@
 }
 
 .pokemon .detail img {
-    max-width: 100%;
+    max-width: 70%;
     height: 70px;
+}
+
+@media screen and (min-width: 375px){
+    .pokemons{
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 @media screen and (min-width: 550px){
